QM handlers deregistration fix Base64 fix